...
                onPressed: () => Navigator.pop(context),
                icon: const Icon(Icons.arrow_back_rounded),
              ),
              const SizedBox(width: 6),
              Expanded(
                child: MapSearchBar(
                  actionKey: const Key('place-query'),
                  onTap: () {},
                  controller: _text,
                  readOnly: false,
                  autofocus: true,
                  onChanged: (value) {
                    _debounce?.cancel();
...
